# agenkit

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  AGENKIT_VISION.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile.go  Dockerfile.python  EXECUTIVE_SUMMARY.md  FRAMEWORKS_README.md  PROJECT_INITAL_DESIGN.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASING.md  ROADMAP.md  TESTING.md  WHY_NOW.md  docker-compose.test.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  sitemap.xml  test_api_keys.py
.github/: ISSUE_AGENT_PATTERNS_GUIDE.md
.github/ISSUE_TEMPLATES/: phase4_chaos_tests.md  phase4_cross_language_tests.md  phase4_property_tests.md
.github/workflows/: benchmarks.yml  docs.yml  integration.yml  lint.yml  test.yml
.hypothesis/constants/: 1be8433a5cd5336f  ae7698015724b98d  d67e235f9d880794
agenkit/: __init__.py  interfaces.py  patterns.py
agenkit-go/benchmarks/: transport_overhead_test.go
agenkit/adapters/: __init__.py
agenkit/adapters/llm/: __init__.py  anthropic.py  base.py  bedrock.py  gemini.py  litellm.py  ollama.py  openai.py
agenkit/adapters/python/: __init__.py  codec.py  errors.py  grpc_server.py  grpc_transport.py  http_server.py  http_transport.py  local_agent.py  registry.py  remote_agent.py  transport.py  websocket_transport.py
agenkit/composition/: __init__.py  conditional.py  fallback.py  parallel.py  sequential.py
agenkit/middleware/: __init__.py  batching.py  caching.py  circuit_breaker.py  metrics.py  rate_limiter.py  retry.py  timeout.py
agenkit/observability/: __init__.py  logging.py  metrics.py  tracing.py
agenkit/patterns/: __init__.py  task.py
agenkit/tools/: __init__.py  tool_agent.py  tool_registry.py
benchmarks/: BASELINES.md  CI_BENCHMARKS.md  adapter_overhead.py  test_adapter_overhead.py  test_composition_overhead.py  test_middleware_overhead.py  test_overhead.py  test_streaming_overhead.py  test_transport_overhead.py
contributing/: index.html
core-concepts/: index.html
core-concepts/architecture/: index.html
core-concepts/design-principles/: index.html
core-concepts/interfaces/: index.html
deploy/: README.md  prometheus.yml
deploy/kubernetes/: configmap.yaml  go-http-deployment.yaml  go-http-service.yaml  hpa.yaml  ingress.yaml  namespace.yaml  python-http-deployment.yaml  python-http-service.yaml
docs/: API.md  GO_PROTOCOL_ADAPTER_DESIGN.md  PHASE4_CHAOS_PLAN.md  PHASE4_TEST_PLAN.md  PYTHON_PROTOCOL_ADAPTER_DESIGN.md  SECURITY.md  VIDEO_TUTORIALS.md  observability-go-api.md  observability-python-api.md  observability.md
docs-site/: contributing.md  index.md
docs-site/core-concepts/: architecture.md  design-principles.md  index.md  interfaces.md
docs-site/examples/: index.md
docs-site/features/: composition.md  index.md  middleware.md  observability.md  tools.md  transport.md
docs-site/getting-started/: first-agent.md  index.md  installation.md  quick-start.md
docs-site/guides/: deployment.md  index.md  python.md
docs-site/performance/: benchmarks.md  index.md
docs/patterns/: COMPOSITION.md  MIDDLEWARE.md  TOOLS.md
examples/: 01_basic_agent.py  02_sequential_pattern.py  03_parallel_pattern.py  04_router_pattern.py  05_tool_usage.py  06_pattern_composition.py  README.md  index.html
examples/adapters/: 01_basic_remote_agent.py  02_agent_registry.py  03_streaming.py
examples/composition/: conditional_example.py  fallback_example.py  parallel_example.py  sequential_example.py
examples/middleware/: batching_example.py  caching_example.py  circuit_breaker_example.py  metrics_example.py  rate_limiter_example.py  retry_example.py  timeout_example.py
examples/observability/: observability_example.py
examples/tools/: calculator_example.py  database_example.py  os_tools_example.py  search_example.py
examples/transport/: grpc_example.py  websocket_example.py
features/: index.html
features/composition/: index.html
features/middleware/: index.html
features/observability/: index.html
features/tools/: index.html
features/transport/: index.html
getting-started/: index.html
getting-started/first-agent/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guides/: index.html
guides/best-practices/: index.html
guides/cross-language/: index.html
guides/deployment/: index.html
guides/go/: index.html
guides/python/: index.html
performance/: index.html
performance/benchmarks/: index.html
proto/: __init__.py  agent.proto  agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py
search/: search_index.json
tests/: test_interfaces.py  test_patterns.py
tests/adapters/: __init__.py
tests/adapters/llm/: __init__.py  conftest.py  test_anthropic.py  test_base.py  test_bedrock.py  test_gemini.py  test_litellm.py  test_ollama.py  test_openai.py
tests/adapters/python/: __init__.py  test_codec.py  test_grpc_transport.py  test_http_transport.py  test_integration.py  test_parse_endpoint_grpc.py  test_registry.py  test_streaming.py  (+3 more)
tests/chaos/: __init__.py  chaos_agents.py  test_middleware_resilience.py  test_network_failures.py  test_partial_failures.py  test_service_unavailability.py  test_slow_responses.py
tests/composition/: __init__.py  test_composition.py
tests/integration/: __init__.py  helpers.py  test_basic_integration.py  test_grpc_cross_language.py  test_http_cross_language.py  test_http_transport.py  test_middleware_consistency.py  test_observability_cross_language.py  test_server.py  test_transport_grpc.py  test_transport_http.py  test_transport_websocket.py  test_websocket_cross_language.py
tests/middleware/: __init__.py  test_batching.py  test_caching.py  test_circuit_breaker.py  test_metrics.py  test_rate_limiter.py  test_retry.py  test_timeout.py
tests/observability/: __init__.py  test_logging.py  test_metrics.py  test_tracing.py
tests/property/: __init__.py  strategies.py  test_cache_properties.py  test_circuit_breaker_properties.py  test_message_properties.py  test_retry_properties.py
tests/tools/: test_tool_agent.py
