[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenkit"
version = "0.1.0"
description = "The foundation layer for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Scott Friedman", email = "scttfrdmn@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "httpx[http2]>=0.27.0",
    "aiohttp>=3.9.0",
    "aioquic>=1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
benchmarks = [
    "pytest-benchmark>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/agenkit/agenkit"
Documentation = "https://docs.agenkit.dev"
Repository = "https://github.com/agenkit/agenkit"
Issues = "https://github.com/agenkit/agenkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["agenkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.mypy]
strict = true
warn_unreachable = true
warn_unused_configs = true
pretty = true
show_column_numbers = true
show_error_context = true
files = ["agenkit"]

# Less strict for tests and benchmarks
[[tool.mypy.overrides]]
module = ["tests.*", "benchmarks.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.isort]
known-first-party = ["agenkit"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.coverage.run]
source = ["agenkit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
